delete volumesa and fixed error generate_sql function

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ services:
       - OLLAMA_HOST=http://host.docker.internal:11434
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    volumes:
-      - .:/app
+    # volumes:
+    #   - .:/app
